; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ioat/extr_ioat.c_ioat_acquire_reserve.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ioat/extr_ioat.c_ioat_acquire_reserve.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ioat_softc = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ioat_acquire_reserve(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.ioat_softc*, align 8
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load i32, i32* %4, align 4
  %10 = call %struct.ioat_softc* @to_ioat_softc(i32 %9)
  store %struct.ioat_softc* %10, %struct.ioat_softc** %7, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @ioat_acquire(i32 %11)
  %13 = load %struct.ioat_softc*, %struct.ioat_softc** %7, align 8
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @ioat_reserve_space(%struct.ioat_softc* %13, i32 %14, i32 %15)
  store i32 %16, i32* %8, align 4
  %17 = load i32, i32* %8, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %3
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @ioat_release(i32 %20)
  br label %22

22:                                               ; preds = %19, %3
  %23 = load i32, i32* %8, align 4
  ret i32 %23
}

declare dso_local %struct.ioat_softc* @to_ioat_softc(i32) #1

declare dso_local i32 @ioat_acquire(i32) #1

declare dso_local i32 @ioat_reserve_space(%struct.ioat_softc*, i32, i32) #1

declare dso_local i32 @ioat_release(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
